[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "pywa.__version__"}
readme = {file = "README.rst", content-type = "text/x-rst"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["pywa*"]
exclude = ["tests*"]

[project]
name = "pywa"
description = "Python wrapper for the WhatsApp Cloud API"
dynamic = ["version", "readme", "dependencies"]
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    {name = "David Lev", email = "davidlev@telegmail.com"},
]
keywords = ['whatsapp', 'whatsapp-api', 'whatsapp-cloud-api', 'whatsapp-cloud', 'whatsapp-api-python',
    'whatsapp-cloud-api-python', 'pywa', 'wapy', 'wa', 'wa-api', 'wa-cloud-api', 'wa-cloud', 'wa-api-python',
    'wa-cloud-api-python', 'whatsapp-webhook', 'whatsapp-webhook-python', 'whatsapp-webhook-api',
]
classifiers = [
    'Topic :: Communications :: Chat',
    'Topic :: Communications',
    'Topic :: Utilities',
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]

[project.optional-dependencies]
flask = ['flask']
fastapi = ['fastapi', 'uvicorn[standard]']

[project.urls]
"Documentation" = "https://pywa.readthedocs.io/"
"Issue Tracker" = "https://github.com/david-lev/pywa/issues"
"Source Code" = "https://github.com/david-lev/pywa"
"Funding" = "https://github.com/sponsors/david-lev"
