[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "pywa.__version__" }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools.packages.find]
include = ["pywa*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
pywa = ["py.typed"]

[project]
name = "pywa"
description = "🚀 Build WhatsApp Bots in Python • Fast, Effortless, Powerful"
dynamic = ["version", "readme"]
license = "MIT"
license-files = [
    "LICENSE",
]
requires-python = ">=3.10"
authors = [
    { name = "David Lev", email = "david@davidlev.dev" },
]
maintainers = [
    { name = "David Lev", email = "david@davidlev.dev" },
    { name = "Yehuda Lev", email = "yehuda@yehudalev.com" },
]
keywords = [
    "whatsapp",
    "whatsapp cloud api",
    "meta whatsapp api",
    "whatsapp webhook",
    "whatsapp templates",
    "whatsapp flows",
    "whatsapp calling",
    "whatsapp automation",
    "python framework",
    "python",
    "python library",
    "asyncio",
    "async",
    "whatsapp bot",
    "chatbot",
    "chatbot framework",
    "messaging bot",
    "automation",
    "webhook",
    "webhook framework",
    "webhook handler",
    "pywa",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Environment :: Web Environment",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-asyncio~=1.3",
    "pytest-mock~=3.15",
    "ruff~=0.14",
    "pre-commit~=4.5",
    "cryptography>=46,<47",
]

docs = [
    "sphinx-book-theme~=1.1",
    "sphinx-copybutton~=0.5",
    "sphinxext-opengraph~=0.13",
    "sphinx-togglebutton~=0.4",
    "myst-parser~=5.0",
    "sphinxcontrib-googleanalytics~=0.5",
    "sphinx-last-updated-by-git~=0.3",
    "sphinx-favicon~=1.0",
]
flask = ["flask[async]"]
fastapi = ["fastapi[standard]"]
cryptography = ["cryptography"]

[project.urls]
"Documentation" = "https://pywa.readthedocs.io/"
"Issue Tracker" = "https://github.com/david-lev/pywa/issues"
"Source Code" = "https://github.com/david-lev/pywa"
"Funding" = "https://github.com/sponsors/david-lev"
"Changelog" = "https://github.com/david-lev/pywa/blob/master/CHANGELOG.md"


[tool.ruff]
extend-exclude = [
    "pywa*/__init__.py",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "T",
    "B",
    "C4",
    "I",
]
ignore = [
    "E402",
    "F405",
]


[tool.coverage.run]
source = ["pywa"]
omit = [
    "pywa/__init__.py",
    "pywa/api.py",
    "pywa/listeners.py",
    "pywa/server.py",
    "pywa/handlers.py",
    "pywa/types/message.py",
    "pywa/_helpers.py",
    "pywa/types/templates.py",
    "pywa/types/sent_update.py",

]
